[gd_scene load_steps=6 format=2]

[ext_resource path="res://HarvestTile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Gameplay.gd" type="Script" id=2]
[ext_resource path="res://hud/score/ScoreDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://hud/plant_queue/PlantQueueDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://hud/level_complete_overlay/LevelCompleteOverlay.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Field" type="Node" parent="."]

[node name="HarvestTile" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 416, 208 )

[node name="HarvestTile2" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 480, 208 )

[node name="HarvestTile3" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 544, 208 )

[node name="HarvestTile4" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 608, 208 )

[node name="HarvestTile5" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 416, 272 )

[node name="HarvestTile6" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 480, 272 )

[node name="HarvestTile7" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 544, 272 )

[node name="HarvestTile8" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 608, 272 )

[node name="HarvestTile9" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 416, 336 )

[node name="HarvestTile10" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 480, 336 )

[node name="HarvestTile11" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 544, 336 )

[node name="HarvestTile12" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 608, 336 )

[node name="HarvestTile13" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 416, 400 )

[node name="HarvestTile14" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 480, 400 )

[node name="HarvestTile15" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 544, 400 )

[node name="HarvestTile16" parent="Field" instance=ExtResource( 1 )]
position = Vector2( 608, 400 )

[node name="ScoreDisplay" parent="." instance=ExtResource( 3 )]
position = Vector2( 32, 400 )

[node name="PlantQueueDisplay" parent="." instance=ExtResource( 4 )]

[node name="LevelCompleteOverlay" parent="." instance=ExtResource( 5 )]
margin_left = 200.0
margin_top = 100.0
margin_right = -200.0
margin_bottom = -100.0
