[gd_scene load_steps=7 format=2]

[ext_resource path="res://hud/level_complete_overlay/LevelCompleteOverlay.tscn" type="PackedScene" id=1]
[ext_resource path="res://hud/plant_queue/PlantQueueDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://hud/score/ScoreDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://gameplay/Gameplay.gd" type="Script" id=4]
[ext_resource path="res://menus/BackToLevelSelectButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://audio/ld-52-gameplay-farmer_v1.ogg" type="AudioStream" id=6]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="Field" type="Node" parent="."]

[node name="ScoreDisplay" parent="." instance=ExtResource( 3 )]
position = Vector2( 32, 400 )

[node name="PlantQueueDisplay" parent="." instance=ExtResource( 2 )]

[node name="LevelCompleteOverlay" parent="." instance=ExtResource( 1 )]
margin_left = 200.0
margin_top = 100.0
margin_right = -200.0
margin_bottom = -100.0

[node name="BackToLevelSelectButton" parent="." instance=ExtResource( 5 )]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
